# apimock

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  TODO.md.example  apimock.cabal  flake.nix  openapi.json  stack.yaml
.github/workflows/: ci.yml
agents/: architecture.md  best-practices-review.md  implementation-status.md  nix-development.md  readability-review.md  test-coverage.md  testing-practices.md
app/: Main.hs  Server.hs
src/: Fakedata.hs  Lib.hs  Main.hs
test/: Spec.hs
test/data/: openapi.json
