cabal-version:      3.0
name:               apimock
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Your Name
maintainer:         your-email@example.com
extra-source-files: CHANGELOG.md

common shared-properties
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:
        base ^>=4.20.0.0,
        aeson,
        openapi3,
        bytestring,
        fakedata,
        containers,
        text,
        scientific,
        random,
        insert-ordered-containers,
        vector,
        scotty,
        http-types,
        wai

library
    import:           shared-properties
    exposed-modules:  Lib, Fakedata
    hs-source-dirs:   src

executable apimock
    import:           shared-properties
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    apimock

test-suite apimock-test
    import:           shared-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          Spec.hs
    other-modules:    Server
    build-depends:    apimock, hspec, hspec-wai, hspec-wai-json, wai-extra
