cabal-version:      3.0
name:               apimock
version:            0.1.0.0
synopsis:           Mock API server based on OpenAPI specifications
description:
    A REST API service that reads OpenAPI 3.x specifications
    and serves mock data for rapid development and testing.

license:            Apache-2.0
license-file:       LICENSE
category:           Web, Testing
build-type:         Simple

common shared-properties
    ghc-options: -Wall
    default-language: GHC2021
    build-depends:
        base ^>=4.20.0.0,
        aeson >=2.0 && <3.0,
        openapi3 >=3.0 && <4.0,
        bytestring >=0.11 && <0.13,
        fakedata,
        containers >=0.6 && <0.8,
        text >=2.0 && <3.0,
        scientific >=0.3 && <0.4,
        random >=1.2 && <1.4,
        insert-ordered-containers >=0.2 && <0.3,
        vector >=0.12 && <0.14,
        scotty >=0.20 && <0.23,
        http-types >=0.12 && <0.13,
        wai >=3.2 && <3.3

library
    import:           shared-properties
    exposed-modules:  Lib, Fakedata
    hs-source-dirs:   src

executable apimock
    import:           shared-properties
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    apimock

test-suite apimock-test
    import:           shared-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          Spec.hs
    other-modules:    Server
    build-depends:
        apimock,
        hspec >=2.10 && <3.0,
        hspec-wai >=0.11 && <0.12,
        hspec-wai-json >=0.11 && <0.12,
        wai-extra >=3.1 && <3.2
